src/test/ui/issues/issue-11692-1.stderr
error: format argument must be a string literal
  --> $DIR/issue-11692-1.rs:2:12
   |
LL |     print!(testo!());
   |            ^^^^^^^^
help: you might be missing a string literal to format with
   |
LL |     print!("{}", testo!());
   |            ^^^^^

error: aborting due to previous error

